Designing playbar and seekbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="left">
         <div class="home bg-grey rounded m-1 p-1">
           <div class="logo">
-            <img class="invert" src="logo.svg" alt="logo" />
+            <img width="130px"class="invert" src="logo.svg" alt="logo" />
           </div>
           <ul>
             <li><img class="invert" src="home.svg" alt="home" />Home</li>
@@ -25,9 +25,7 @@
             <h2>Your library</h2>
           </div>
           <div class="songList">
-            <ul>
-              
-            </ul>
+            <ul></ul>
           </div>
           <div class="footer">
             <div>
@@ -148,17 +146,17 @@
           </div>
           <div class="playbar">
             <div class="seekbar">
-                <div class="circle">
-
-                </div>
+              <div class="circle"></div>
             </div>
-            <div class="songinfo"></div>
-            <div class="songbuttons">
-              <img id="prev" src="prev.svg" alt="" />
-              <img id="play" src="play.svg" alt="" />
-              <img id="next" src="next.svg" alt="" />
+            <div class="abovebar">
+              <div class="songinfo"></div>
+              <div class="songbuttons">
+                <img id="prev" src="prev.svg" alt="" />
+                <img id="play" src="play.svg" alt="" />
+                <img id="next" src="next.svg" alt="" />
+              </div>
+              <div class="songtime"></div>
             </div>
-            <div class="songtime"></div>
           </div>
         </div>
       </div>
