Making the website responsive and  next and previous button to function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div class="container flex bg-black">
       <div class="left">
+        <div class="close">
+          <img class="invert"src="close.svg" alt="">
+        </div>
         <div class="home bg-grey rounded m-1 p-1">
           <div class="logo">
             <img width="130px"class="invert" src="logo.svg" alt="logo" />
@@ -60,14 +63,14 @@
         </div>
       </div>
 
-      <div class="right bg-grey rounded p-1">
+      <div class="right bg-grey rounded">
         <div class="header">
           <div class="nav">
             <div class="hamburgerContainer">
               <img
                 width="40"
                 class="invert hamburger"
-                src="img/hamburger.svg"
+                src="hamburger.svg"
                 alt=""
               />
               <svg
@@ -151,9 +154,9 @@
             <div class="abovebar">
               <div class="songinfo"></div>
               <div class="songbuttons">
-                <img id="prev" src="prev.svg" alt="" />
-                <img id="play" src="play.svg" alt="" />
-                <img id="next" src="next.svg" alt="" />
+                <img width="35"id="prev" src="prev.svg" alt="" />
+                <img width="35"id="play" src="play.svg" alt="" />
+                <img width="35"id="next" src="next.svg" alt="" />
               </div>
               <div class="songtime"></div>
             </div>
