Adding dynamic albums

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="spotifyPlaylists">
           <h1>Spotify Playlists</h1>
           <div class="cardContainer">
-            <div class="card">
+            <!-- <div data-folder="cs" class="card">
               <div class="play">
                 <svg
                   width="16"
@@ -138,14 +138,31 @@
               <h2>lofi beats</h2>
               <p>chill beats, lofi vibes, new tracks every week...</p>
             </div>
-            <div class="card">
+            <div data-folder="ncs" class="card">
+              <div class="play">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M5 20V4L19 12L5 20Z"
+                    stroke="#141B34"
+                    fill="#000"
+                    stroke-width="1.5"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </div>
               <img
                 src="https://i.scdn.co/image/ab67706f0000000254473de875fea0fd19d39037"
                 alt=""
               />
               <h2>lofi beats</h2>
               <p>chill beats, lofi vibes, new tracks every week...</p>
-            </div>
+            </div> -->
           </div>
           <div class="playbar">
             <div class="seekbar">
