--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container flex bg-black">
       <div class="left">
         <div class="close">
-          <img class="invert"src="close.svg" alt="">
+          <img class="invert" src="close.svg" alt="" />
         </div>
         <div class="home bg-grey rounded m-1 p-1">
           <div class="logo">
-            <img width="130px"class="invert" src="logo.svg" alt="logo" />
+            <img width="130px" class="invert" src="logo.svg" alt="logo" />
           </div>
           <ul>
             <li><img class="invert" src="home.svg" alt="home" />Home</li>
@@ -171,11 +171,19 @@
             <div class="abovebar">
               <div class="songinfo"></div>
               <div class="songbuttons">
-                <img width="35"id="prev" src="prev.svg" alt="" />
-                <img width="35"id="play" src="play.svg" alt="" />
-                <img width="35"id="next" src="next.svg" alt="" />
+                <img width="35" id="prev" src="prev.svg" alt="" />
+                <img width="35" id="play" src="play.svg" alt="" />
+                <img width="35" id="next" src="next.svg" alt="" />
               </div>
-              <div class="songtime"></div>
+              <div class="timevol">
+                <div class="songtime"></div>
+                  <div class="volume">
+                    <img width="20"src="volume.svg" alt="" />
+                    <div class="range">
+                      <input type="range"name="volume">
+                    </div>
+                  </div>
+              </div>
             </div>
           </div>
         </div>
