--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <div class="container flex bg-black">
       <div class="left">
         <div class="close">
-          <img class="invert" src="close.svg" alt="" />
+          <img class="invert" src="img/close.svg" alt="" />
         </div>
         <div class="home bg-grey rounded m-1 p-1">
           <div class="logo">
-            <img width="130px" class="invert" src="logo.svg" alt="logo" />
+            <img width="130px" class="invert" src="img/logo.svg" alt="logo" />
           </div>
           <ul>
-            <li><img class="invert" src="home.svg" alt="home" />Home</li>
-            <li><img class="invert" src="search.svg" alt="search" />Search</li>
+            <li><img class="invert" src="img/home.svg" alt="home" />Home</li>
+            <li><img class="invert" src="img/search.svg" alt="search" />Search</li>
           </ul>
         </div>
         <div class="library bg-grey rounded m-1 p-1">
           <div class="heading">
-            <img class="invert" src="playlist.svg" alt="" />
+            <img class="invert" src="img/playlist.svg" alt="" />
             <h2>Your library</h2>
           </div>
           <div class="songList">
@@ -70,7 +70,7 @@
               <img
                 width="40"
                 class="invert hamburger"
-                src="hamburger.svg"
+                src="img/hamburger.svg"
                 alt=""
               />
               <svg
@@ -113,56 +113,6 @@
         <div class="spotifyPlaylists">
           <h1>Spotify Playlists</h1>
           <div class="cardContainer">
-            <!-- <div data-folder="cs" class="card">
-              <div class="play">
-                <svg
-                  width="16"
-                  height="16"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M5 20V4L19 12L5 20Z"
-                    stroke="#141B34"
-                    fill="#000"
-                    stroke-width="1.5"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-              </div>
-              <img
-                src="https://i.scdn.co/image/ab67706f0000000254473de875fea0fd19d39037"
-                alt=""
-              />
-              <h2>lofi beats</h2>
-              <p>chill beats, lofi vibes, new tracks every week...</p>
-            </div>
-            <div data-folder="ncs" class="card">
-              <div class="play">
-                <svg
-                  width="16"
-                  height="16"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M5 20V4L19 12L5 20Z"
-                    stroke="#141B34"
-                    fill="#000"
-                    stroke-width="1.5"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-              </div>
-              <img
-                src="https://i.scdn.co/image/ab67706f0000000254473de875fea0fd19d39037"
-                alt=""
-              />
-              <h2>lofi beats</h2>
-              <p>chill beats, lofi vibes, new tracks every week...</p>
-            </div> -->
           </div>
           <div class="playbar">
             <div class="seekbar">
@@ -171,14 +121,14 @@
             <div class="abovebar">
               <div class="songinfo"></div>
               <div class="songbuttons">
-                <img width="35" id="prev" src="prev.svg" alt="" />
-                <img width="35" id="play" src="play.svg" alt="" />
-                <img width="35" id="next" src="next.svg" alt="" />
+                <img width="35" id="prev" src="img/prev.svg" alt="" />
+                <img width="35" id="play" src="img/play.svg" alt="" />
+                <img width="35" id="next" src="img/next.svg" alt="" />
               </div>
               <div class="timevol">
                 <div class="songtime"></div>
                   <div class="volume">
-                    <img width="20"src="volume.svg" alt="" />
+                    <img width="20"src="img/volume.svg" alt="" />
                     <div class="range">
                       <input type="range"name="volume">
                     </div>
